# serializer version: 1
# name: TestDeepSolid.test_kinetic[imag]
  DeviceArray(0.0, dtype=float32)
# ---
# name: TestDeepSolid.test_kinetic[real]
  DeviceArray(2.67603, dtype=float32)
# ---
# name: TestDeepSolid.test_potential
  DeviceArray(-4.05709, dtype=float32)
# ---
# name: TestDeepSolid.test_walk
  DeviceArray([[[ 3.6101303 ,  0.13946693,  0.82989585,  1.7708621 ,  0.17072193,  0.17384695],
                [ 1.9189657 ,  0.31351727,  0.37731722,  3.5412247 , 98.901505  , 97.24693   ],
                [ 0.25209498, 98.957184  , 99.790825  ,  1.8235291 ,  0.5695312 , 99.80533   ],
                [ 0.18696769, 99.86598   , 98.40442   ,  3.3171842 ,  0.69462645,  0.48239717],
                [ 2.697114  , 99.9651    , 98.81863   ,  1.1161598 , 97.348145  ,  0.73665106],
                [ 3.9124656 , 99.67652   ,  0.45641023,  3.55336   ,  0.47175992,  1.8979391 ],
                [ 1.2541127 ,  0.28918207, 99.37522   ,  3.9202127 , 99.65397   , 95.67408   ],
                [ 1.8367959 ,  0.37423372,  0.52410626,  0.9470842 ,  0.27238303, 98.64126   ],
                [ 3.512603  , 99.32944   , 99.71968   ,  3.450934  ,  0.83546853, 99.260796  ],
                [ 1.987719  , 99.8525    ,  0.8577773 ,  3.0705564 , 99.969315  ,  0.30420953]]],            dtype=float32)
# ---
# name: TestDeepSolid.test_wf
  DeviceArray(0.8603, dtype=float32)
# ---
# name: TestFermiNet.test_kinetic
  Array(0.278457, dtype=float32)
# ---
# name: TestFermiNet.test_potential
  Array(-0.782836, dtype=float32)
# ---
# name: TestFermiNet.test_walk
  Array([[[0.4167, 0.272994, 0.994659],
          [-0.163645, 0.50252, -0.217933],
          [0.577404, 0.532148, -0.83614],
          [-0.653346, 0.291591, 1.593746],
          [0.479838, -0.099346, -0.271615],
          [-0.407884, -2.439489, 0.041675],
          [0.055479, 0.243997, -0.093741],
          [0.225347, 0.424637, -0.74413],
          [0.303718, 1.124749, -0.711063],
          [0.004162, -0.756525, -1.501591]]], dtype=float32)
# ---
# name: TestFermiNet.test_wf
  Array(0.126955, dtype=float32)
# ---
# name: TestHydrogen.test_kinetic
  Array(1.026065, dtype=float32)
# ---
# name: TestHydrogen.test_potential
  Array(-1.526065, dtype=float32)
# ---
# name: TestHydrogen.test_walk
  Array([[[-0.026982, -0.019454, 0.308942],
          [0.415737, -1.017753, 0.706103],
          [1.131933, -1.515902, -1.416364],
          [-0.563377, 0.047348, 1.888385],
          [0.062221, -0.353404, -0.365479]]], dtype=float32)
# ---
# name: TestHydrogen.test_wf
  Array(-0.65528, dtype=float32)
# ---
